@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.themoviedb.org"
        name="The MovieDB"
-       version="1.0.3"
+       version="1.0.4"
        provider-name="Team XBMC">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
     <import addon="metadata.common.themoviedb.org" version="1.0.1"/>
-    <import addon="metadata.common.dtrailer.com" version="1.0.1"/>
+    <import addon="metadata.common.hdtrailers.net" version="1.0.1"/>
   </requires>
   <extension point="xbmc.metadata.scraper.movies"
              language="en"
