@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <strings>
     <string id="30000">启用同人画</string>
-    <string id="30001">启用Dtrailer.com预告片</string>
+    <string id="30001">启用HD-Trailers.net预告片</string>
 </strings>
