@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <strings>
     <string id="30000">Enable Fanart</string>
-    <string id="30001">Enable Trailers from Dtrailer.com</string>
+    <string id="30001">Enable Trailers from HD-Trailers.net</string>
 </strings>
