@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <strings>
     <string id="30000">Fanart engedélyezése</string>
-    <string id="30001">Trailer letöltés engedélyezése a Dtrailer.com-ról</string>
+    <string id="30001">Trailer letöltés engedélyezése a HD-Trailers.net-ről</string>
 </strings>
