@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <strings>
     <string id="30000">팬아트 사용</string>
-    <string id="30001">Dtrailer.com 에서 예고편 가져오기</string>
+    <string id="30001">HD-Trailers.net 에서 예고편 가져오기</string>
 </strings>
