@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <strings>
     <string id="30000">Ligar Fanart</string>
-    <string id="30001">Ligar trailers de Dtrailer.com</string>
+    <string id="30001">Ligar trailers de HD-Trailers.net</string>
 </strings>
