@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <settings>
     <setting label="30000" type="bool" id="fanart" default="true"/>
-    <setting label="30001" type="bool" id="dtrailer" default="false"/>
+    <setting label="30001" type="labelenum" values="No|480p|720p|1080p" id="TrailerQ" default="480p"/>
 </settings>
